src/objects/PSButtonLauncherCategory__c.object
<CustomObject>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <label>Icon URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSButtonLauncherSetting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PSButtonLauncherSetting</label>
        <referenceTo>PSButtonLauncherSetting__c</referenceTo>
        <relationshipLabel>PSButtonLauncherCategory</relationshipLabel>
        <relationshipName>PSButtonLauncherCategory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>PSButtonLauncherCategory</label>
    <nameField>
        <displayFormat>BLC-{00000}</displayFormat>
        <label>PSButtonLauncherCategory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSButtonLauncherCategory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>